[gd_scene load_steps=2 format=2]

[ext_resource path="res://Interface/ConfigureMenu/ConfigureMenu.gd" type="Script" id=1]

[node name="ConfigureMenu" type="Panel"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.5
margin_top = -54.5
margin_right = 43.5
margin_bottom = 54.5
script = ExtResource( 1 )
tutorial_scene = "res://Interface/Tutorial/TutorialPage1.tscn"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 79.0
margin_bottom = 8.0
text = "CONFIGURAÇÕES"
align = 1

[node name="Resume" type="Button" parent="VBoxContainer"]
margin_top = 12.0
margin_right = 79.0
margin_bottom = 26.0
text = "Retomar"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
margin_top = 87.0
margin_right = 79.0
margin_bottom = 101.0
size_flags_vertical = 10
text = "Menu Principal"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
